# hexroll3e

./: .gitignore  Cargo.toml  LICENSE  README.md
hexroll3/: Cargo.toml
hexroll3-map/: Cargo.toml
hexroll3-map/assets/: forest-dungeon.ktx2  forest.ktx2
hexroll3-map/src/: hexmap.rs  lib.rs  main.rs
hexroll3-scroll/: Cargo.toml  scroll.pest
hexroll3-scroll-data/: main.scroll
hexroll3-scroll-data/dungeons/: appearance.scroll  areas.scroll  cave.scroll  containers.scroll  debris.scroll  doors.scroll  dungeon.scroll  fountain.scroll  fungi.scroll  mouth.scroll  pools.scroll  portal.scroll  remains.scroll  temple.scroll  tomb.scroll  traps.scroll
hexroll3-scroll-data/dungeons/encounters/: aberrations.scroll  caves.scroll  dragons.scroll  humanoids.scroll  magical.scroll  ooze.scroll  temples.scroll  undead.scroll  vermins.scroll
hexroll3-scroll-data/factions/: cult.scroll  militia.scroll  syndicate.scroll
hexroll3-scroll-data/hooks/: artifacts.scroll  quest.scroll  relation.scroll  rumor.scroll
hexroll3-scroll-data/hooks/quests/: delivery.scroll  escort.scroll  lost_item.scroll  missing_person.scroll
hexroll3-scroll-data/monsters/: activities.scroll  base.scroll
hexroll3-scroll-data/names/: base.scroll  dungeons.scroll  jibrish.scroll  npc.scroll  places.scroll  regions.scroll  taverns.scroll
hexroll3-scroll-data/npc/: character.scroll  equipment.scroll  gender.scroll  state.scroll
hexroll3-scroll-data/osr/: equipment.scroll  magic_items.scroll  monsters.scroll  npc.scroll  npc_allocs.scroll  quests.scroll  treasure.scroll
hexroll3-scroll-data/osr/encounters/: dungeon.scroll  wilderness.scroll
hexroll3-scroll-data/realms/: base.scroll  faction.scroll  name.scroll  realm.scroll  ruler.scroll
hexroll3-scroll-data/settlements/: base.scroll  castle.scroll  city.scroll  district.scroll  dwelling.scroll  folk.scroll  shops.scroll  stronghold.scroll  tavern.scroll  town.scroll  village.scroll
hexroll3-scroll-data/utils/: index.scroll  sigils.scroll
hexroll3-scroll-data/wilderness/: base.scroll  desert.scroll  forest.scroll  hex.scroll  jungle.scroll  landmarks.scroll  mountains.scroll  ocean.scroll  plains.scroll  region.scroll  swamps.scroll  tundra.scroll  weather.scroll
hexroll3-scroll/src/: commands.rs  frame.rs  generators.rs  instance.rs  lib.rs  parser.rs  renderer.rs  renderer_env.rs  repository.rs  semantics.rs
hexroll3-scroll/tests/: generators.rs  renderer.rs  utils.rs
hexroll3-testbed/: Cargo.toml
hexroll3-testbed/src/: app.rs  main.rs
hexroll3-testbed/src/app/helpers/: actions.rs  config.rs  html.rs  logger.rs  mod.rs  router.rs
hexroll3-testbed/src/app/views/: center_panel_selectors.rs  mod.rs  open_or_roll.rs  preview.rs  raw_html.rs  raw_json.rs  rendered_json.rs  top_app_bar.rs
